<resources>
    <string name="app_name">AMSS</string>
    <string name="global_ok">DA</string>
    <string name="global_cancel">NE</string>
    <string name="global_yes">Da</string>
    <string name="global_no">Ne</string>
    <string name="global_ok_text">U REDU</string>
    <string name="header_news">VESTI</string>
    <string name="begining_date">Datum početka:</string>
    <string name="header_info">INFO</string>
    <string name="ending_date">Datum isteka:</string>
    <string name="developed_by"></string>
    <string name="exit_dialog_message">Zatvoriti aplikaciju?</string>
    <string name="no_result_message">Trenutno nema informacija o izabranoj regiji.</string>
    <string name="safety_status_ok_message">Hvala Vam što ste nas obavestili o potencijalnoj opasnosti na putu i poslali fotografiju. Naš operater će proceniti Vaše informacije. Vaš AMSS</string>
    <string name="error_connection">Došlo je do greške u komunikaciji sa serverom</string>
    <string name="error_login_serials">Lista serijskih brojeva je prazna.</string>
    <string name="error_login_step1">Nažalost niste uneli korektni broj članske karte.</string>
    <string name="error_login_step2">Nažalost niste odabrali korektno ime.</string>
    <string name="error_login_step3">Nažalost niste odabrali korektni registraciju. Prijavljivanje neuspešno.</string>
    <string name="error_info_tolls_calculate_cities">Lista gradova je prazna.</string>
    <string name="error_info_tolls_calculate">Došlo je do greške prilikom učitavanja rezultata sa servera. Molimo pokušajte ponovo.</string>
    <string name="error_road_conditions_video">Video nije učitan. Pokušajte ponovo kasnije.</string>
    <string name="error_info_registration_calculate_municipalities">Lista opština je prazna.</string>
    <string name="error_info_registration_calculate_vehicletypes">Lista tipova vozila je prazna.</string>
    <string name="error_info_registration_calculate">Došlo je do greške prilikom učitavanja rezultata sa servera. Molimo pokušajte ponovo.</string>
    <string name="error_info_registration_calculate_data">Neki od podataka nisu pravilno uneseni. Molimo proverite još jednom.</string>
    <string name="error_info_registration_calculate_policydata">Stepen prethodne polise mora biti u opsegu [1,12]. Prepišite ovu vrednost sa trenutno važeće polise</string>
    <string name="SMS_text_error_message">Unesite tekst poruke i pokušajte ponovo!</string>
    <string name="menu_with_shortcuts">Meni sa prečicama</string>
    <string name="menu_text">“Meni sa prečicama” dostupan je iz svih delova aplikacije i sadrži tri ikonice:</string>
    <string name="menu_paddlock_text">prijavljivanje članova AMSS na aplikaciju,</string>
    <string name="menu_news_text">za vesti,</string>
    <string name="info_for_vehicle_owners_title">INFORMACIJE ZA VOZAČE</string>
    <string name="advices_for_vehicle_owners_title">SAVETI</string>
    <string name="international_documents_title">MEĐUNARODNA DOKUMENTA</string>
    <string name="menu_info_text">za informaciju, jednostavni vodič kroz AMSS android mobilnu aplikaciju i uslove i prava korišćenja</string>
    <string name="menu_text_long">U delu za prijavljivanje bi trebalo da ukucate broj koji se sastoji od vaše članske serije i članskog broja u poljima predviđenim za to. Sistem vam, potom, nudi opciju da od tri ponuđena imena i prezimena izaberete svoje. Posle toga, na isti način birate tačan broj registracije vašeg automobila i time je logovanje završeno. Ovo je odlična opcija aplikacije, jer će ulogovani članovi AMSS imati prednost prilikom slanja SMS poruke Operativnom centru AMSS kada im bude zatrebala pomoć na putu, šlepovanje, popravke, saveti i informacije.\n\n  Iz svih delova aplikacije možete lako da pristupite i “vestima”. Tu se nalaze sve najaktuelnije informacije iz AMSS sistema. Tu možete da saznate o svim pogodnostima i popustima za članove AMSS i ostale vozače, ali i najsvežije podatke o stanju u saobraćaju. Uz to, odmah do “vesti” je informacija o android aplikaciji kao i jednostavni, sveobuhvatni vodič kroz nju.</string>
    <string name="help_text">Ukoliko vas je tokom vožnje zadesila bilo kakva nezgoda ili kvar, dovoljno je da u početnom meniju AMSS android mobilne aplikacije kliknete na “pomoć”. Na ekranu će vam se pojaviti vaša trenutna GPS lokacija i pitanje da li želite da pozovete Operativni centar AMSS na broj 1987 ili da operateru pošaljete SMS poruku. Ukoliko želite da pozovete, pojavljuju se vaše koordinate, savet da ih zapišete i pitanje da li da pozivete 1987. Ako odgovorite “da”, tada se uspostavlja veza sa operaterom. Istovremeno, postoji opcija i slanja SMS poruke u kojoj su automatski već unete vaše koordinate, a od vas se očekuje da napišete tekst poruke u smislu koja vam je pomoć neophodna i to pošaljete. Za nekoliko trenutaka dobićete odgovor da je vaš zahtev prihvaćen i da vam uskoro stiže odgovor operatera. A ako ste u aplikaciji prijavljeni kao član AMSS, imaćete prioritet u odnosu na druge građane koji su se, takođe, obratili Operativnom centru AMSS. Operater će vas pozvati ili poslati SMS poruku u kojoj će biti podaci kada je vozilo za šlepovanje ili za pomoć na putu krenulo ka vama, okvirno vreme njegovog dolaska do vaše lokacije i po potrebi koje su njegove registarske tablice.</string>
    <string name="info_text">AMSS android mobilna aplikacija donosi vam apsolutno sve odgovore na vaša pitanja. U podmeniju su rubrike:</string>
    <string name="info_phone"><b>”važni telefoni”</b>- tu su telefoni i radno vreme institucija kao što su policija, vatrogasna brigada, hitna pomoć, AMSS – pomoć na putu, tačno vreme, telegrami, ali i drugih koji mogu da vam zatrebaju.</string>
    <string name="info_international_documents"><b>“međunarodna dokumenta”</b> - nude odgovore na pitanja o <b>međunarodnoj vozačkoj dozvoli</b> - šta je ona, koja su vam dokumenta neophodna da biste je izvadili, rok važenja i mreža poslovnica AMSS gde je možete dobiti.  Tu je detaljno objašnjena informacija i o <b>dozvoli za upravljanje tuđim vozilom u inostranstvu</b> - koja su neophodna dokumenta da biste je dobili, koliko košta, kome se izdaje, rok važenja, a, takođe, imate i kompletnu mapu poslovnica gde je možete dobiti.</string>
    <string name="info_tag"><b>“TAG elektronska naplata putarina”</b> - kada kliknete na tu ikonicu u podmeniju dobićete korisne informacije za šta služe TAG uređaji za elektronsko plaćanje putarina i koliko olakšavaju prolazak kroz naplatne rampe. AMSS Poslovni sistem obezbeđuje vam popust od osam do 15 odsto na punu cenu putarine. Možete da se informišete i o cenama TAG uređaja i vrednostima avansne uplate i popustima. Naravno, tu je i mapa Srbije na kojoj su označeni gradovi gde se nalaze auto-centri AMSS u kojima se prodaju TAG uređaji.</string>
    <string name="info_cci_text"><b>“Camping Card International (CCI)  - Međunarodna kamping kartica</b> - ovde su informacije o tome šta je CCI kartica, ko može da je dobije, njenoj ceni, od čega je sve osiguran njen vlasnik, uslovi za dobijanje, kao i mapa lokacija međunarodnih auto-kampova.</string>
    <string name="info_propisi_text"><b>”propisi”</b> - u ovoj rubrici su podaci o važećim propisima u vezi sa prevozom dece u Srbiji i Evropi, visini kazni za pojedine saobraćajne prekršaje u zemljama EU, šta važi u Makedoniji, Hrvatskoj, Crnoj Gori, možete da otvorite ceo Zakon o bezbednosti saobraćaja. </string>
    <string name="info_saveti_text"><b>”saveti i preporuke”</b> - ova opcija nudi spisak saveta za održavanje vašeg vozila – šta bi trebalo da uradite posle pređenih 500, 5.000, 10.000, 20.000, 30.000 kilometra, kao i kako se kontroliše akumulator, pritisak u pneumaticima, kad i kako se pere i štiti vozilo u odnosu na period u godini, koja vam je neophodna oprema za duža putovanja.</string>
    <string name="info_kalkulator"><b>”kalkulator registracije” </b>” - informativno izračunava koliko bi mogla da vas košta registracija vašeg vozila. Neophodno je da u traženim poljima upišete tip vozila, kao i da ubeležite polje da li vam je potrebna nova saobraćajne dozvole ili nove registarske tablice. Sa druge strane, ako želite da saznate baš tačan iznos morate da unesete takozvani premijski stepen prethodne polise i broj šteta po toj polisi. </string>
    <string name="info_putarine"><b>“izračunavanje putarina”</b>- uz ovu opciju ne morate više da se pitate koliko će vas koštati putarina. Dovoljno je samo da označite odakle ste krenuli i gde bi trebalo da stignete, a AMSS android mobilna aplikacija uradiće taj posao.</string>
    <string name="info_daljinari"><b>“daljinari”</b> – opcija vam prikazuje daljinu između dve destinacije. Dovoljno je da ih označite u aplikaciji. </string>
    <string name="main_info_text">INFORMACIJE\nZA VOZAČE</string>
    <string name="become_loyalty_old_member_text">Stari član:</string>
    <string name="become_loyalty_osnovni_podaci_text">Osnovni podaci:</string>
    <string name="become_loyalty_next_button_text">Dalje</string>
    <string name="become_loyalty_name_text">Ime:</string>
    <string name="become_loyalty_prezime_text">Prezime:</string>
    <string name="become_loyalty_jmbg_text">JMBG - matični broj:</string>
    <string name="become_loyalty_company_name_text">Naziv firme:</string>
    <string name="become_loyalty_company_person_name_text">Ime nosioca članstva:</string>
    <string name="become_loyalty_company_person_surname_text">Prezime nosioca članstva:</string>
    <string name="become_loyalty_company_pib_text">PIB:</string>
    <string name="become_loyalty_kontakt_podaci_text">Kontakt podaci:</string>
    <string name="become_loyalty_adresa_text">Adresa:</string>
    <string name="become_loyalty_mesto_text">Mesto:</string>
    <string name="become_loyalty_telefon_text">Telefon:</string>
    <string name="become_loyalty_mobilni_telefon_text">Mobilni telefon:</string>
    <string name="become_loyalty_email_text">Adresa e-pošte:</string>
    <string name="become_loyalty_podaci_o_vozilu_text">Podaci o vozilu:</string>
    <string name="become_loyalty_marka_vozila_text">Marka vozila:</string>
    <string name="become_loyalty_tip_vozila_text">Tip vozila:</string>
    <string name="become_loyalty_registarska_oznaka_text">Registarska oznaka:</string>
    <string name="become_loyalty_boja_vozila_text">Boja vozila:</string>
    <string name="become_loyalty_godina_proizvodnje_text">Godina proizvodnje:</string>
    <string name="become_loyalty_osiguravajuce_drustvo_text">Osiguravajuće društvo:</string>
    <string name="become_loyalty_vrsta_clanstva_text">Vrsta članstva:</string>
    <string name="become_loyalty_osnovno_text">osnovno</string>
    <string name="become_loyalty_osnovno_super_text">osnovno+super</string>
    <string name="become_loyalty_button_text">Postani član</string>
    <string name="become_loyalty_izaberite_seriju_text">Izaberite seriju:</string>
    <string name="become_loyalty_unesite_broj_kartice_text">Unesite broj kartice:</string>
    <string name="become_loyalty_postanski_broj__text">Poštanski broj:</string>
</resources>