<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/walpaper_light_copy"
    android:orientation="vertical" >

    <include layout="@layout/titlebar" />

    <include layout="@layout/headerbar" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/become_loyalty_podaci_o_vozilu_text" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/individual"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/edit_vehicle_trademark"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/become_loyalty_marka_vozila_text"
                    android:inputType="text"
                    android:maxLength="50"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/edit_vehicle_type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/become_loyalty_tip_vozila_text"
                    android:inputType="text"
                    android:maxLength="50"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/edit_reg"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/become_loyalty_registarska_oznaka_text"
                    android:inputType="text"
                    android:maxLength="20"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/edit_vehicle_color"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/become_loyalty_boja_vozila_text"
                    android:inputType="text"
                    android:maxLength="50"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/edit_year"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/become_loyalty_godina_proizvodnje_text"
                    android:inputType="number"
                    android:maxLength="4"
                    android:padding="5dp" />

                <EditText
                    android:id="@+id/edit_insurance_company"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/become_loyalty_osiguravajuce_drustvo_text"
                    android:inputType="text"
                    android:maxLength="50"
                    android:padding="5dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/loyalty_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:text="@string/become_loyalty_vrsta_clanstva_text" />

            <RadioGroup
                android:id="@+id/type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" >

                <RadioButton
                    android:id="@+id/basic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/become_loyalty_osnovno_text" />

                <RadioButton
                    android:id="@+id/basic_super"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/become_loyalty_osnovno_super_text" />
            </RadioGroup>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/next"
        style="@style/Button"
		android:onClick="SendValues"
        android:text="@string/become_loyalty_button_text" />

</LinearLayout>